# EvPanel

./: .env.backend  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: CD.yml  CI.yml  black.yml  deploy  deploy.yml  dev.yml  docker.yml
backend/: .env  Dockerfile  api.py  app.py  auth.py  config.py  core.py  logs.py  models.py  others.py  pyproject.toml  requirements.txt
backend/backend/: app.py  models.py
backend/src/: .env_example  __init__.py  api.py  app.py  auth.py  config.py  job.py  models.py  others.py
backend/src/API/: auth.py  job.py  websites.py
backend/tests/: conftest.py
backend/tests/API/: test_auth.py  test_config.py  test_websites.py
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  main.jsx
frontend/src/CSS/: input.css
frontend/src/Components/: Loading.jsx  Navbar.jsx  Navbar_Auth.jsx  Navbar_Bell.jsx  Navbar_Language.jsx  Navbar_Logo.jsx  Navbar_Profile.jsx  Navbar_Theme.jsx
frontend/src/Contexts/: Auth.jsx
frontend/src/Others/: Protected.jsx  i18n.jsx  requests.jsx
frontend/src/Sites/: Activate.jsx  Dashboard.jsx  Discord.jsx  Home.jsx  Jobs.jsx  Login.jsx  Logout.jsx  Register.jsx
