[tool.poetry]
name = "evpanel"
version = "0.1.0"
description = ""
authors = ["kamyrdol32 <kamyrdol32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-cors = "^3.0.10"
flask-jwt-extended = "^4.4.4"
flask-sqlalchemy = "^3.0.3"
flask-mail = "^0.9.1"
gunicorn = "^20.1.0"
bcrypt = "^4.0.1"
python-dotenv = "^0.21.1"
flask-wtf = "^1.1.1"
mysql = "^0.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"