[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kamyrdol32 <kamyrdol32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-cors = "^3.0.10"
flask-jwt-extended = "^4.4.4"
flask-sqlalchemy = "^3.0.3"
flask-mail = "^0.9.1"
flask-openapi3 = "^2.3.1"
flask-wtf = "^1.1.1"
gunicorn = "^20.1.0"
bcrypt = "^4.0.1"
python-dotenv = "^0.21.1"
pymysql = "^1.0.2"
flask-bcrypt = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
