[tool.poetry]
name = "evpanel"
version = "0.1.0"
description = ""
authors = ["kamyrdol32 <kamyrdol32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
flask = "^2.2.3"
flask-cors = "^3.0.10"
flask-jwt-extended = "^4.4.4"
flask-sqlalchemy = "^3.0.3"
flask-mail = "^0.9.1"
flask-openapi3 = "^2.3.1"
flask-bcrypt = "^1.0.1"
gunicorn = "^20.1.0"
bcrypt = "^4.0.1"
pymysql = "^1.0.2"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-flask = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
